--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.4.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/lab": "^5.0.0-alpha.121",
+    "@mui/material": "^5.11.11",
+    "@reduxjs/toolkit": "^2.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
-    "react-redux": "^9.1.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.1",
-    "tailwindcss": "^3.4.15",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.14.0",
-    "@mui/lab": "^5.0.0-alpha.121",
-    "@mui/material": "^5.11.11"
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
