--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.1",
+    "react-toastify": "^11.0.3",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
