--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.1",
     "react-toastify": "^11.0.3",
+    "redux-persist": "6",
     "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
